# ScrapperEngine

./: .gitignore  CMakeList.txt  CMakeLists.txt  CMakePresets.json  MyMudGame  README.md  tempCodeRunnerFile.cpp  vcpkg.json
Assets/: Plan.md
Assets/header/: CombatSystem.h  Controller.h  EventComponents.h  EventSystem.h  GameDatabase.h  GameManager.h  IKChain.h  Mob.h  StorySystem.h
Assets/header/Controllers/: BattleController.h  ChoiceController.h  Controller.h  ControllerManager.h  StoryController.h  UpdateContext.h
Assets/header/Core/: GameManager.h
Assets/header/Data/: Entity.h  EntityData.h  GameDatabase.h  RenderData.h  StatKey.h
Assets/header/Events/: BattleStartComponent.h  ChoiceComponent.h  Event.h  EventComponent.h  Scene.h  TextComponent.h
Assets/header/GameDatabase/: GameDatabase.h
Assets/header/GameManager/: GameManager.h
Assets/header/Input/: InputState.h
Assets/header/System/: GameSystem.h
Assets/header/System/CombatSystem/: CombatSystem.h
Assets/header/System/EventSystem/: EventSystem.h
Assets/header/Systems/: BattleSystem.h  ChoiceSystem.h  EventSystem.h  TextSystem.h
Assets/header/Utils/: Singleton.h  Updatable.h
Assets/header/Views/: CombatView.h
Assets/source/: GameDatabase.cpp  TextRPGKit.cpp  main.cpp
Assets/source/Core/: CombatSystem.cpp  EventSystem.cpp  GameDatabase.cpp  GameManager.cpp
Assets/source/Core/Controllers/: BattleController.cpp  ChoiceController.cpp  ControllerManager.cpp  StoryController.cpp
Assets/source/Core/Data/: Entity.cpp  GameDatabase.cpp
Assets/source/Core/EventComponents/: BattleStartComponent.cpp  ChoiceComponent.cpp  TextComponent.cpp
Assets/source/Core/Systems/: BattleSystem.cpp  ChoiceSystem.cpp  EventSystem.cpp  TextSystem.cpp
Assets/source/Core/Views/: CombatView.cpp
Fonts/: README.md
MyMudGame.dSYM/Contents/: Info.plist
MyMudGame.dSYM/Contents/Resources/DWARF/: MyMudGame
data/: actions.json  broken_test.json  entities.json  goblin.json  items.json  map.json  story.json
data/GameData/: actions.json  items.json  story.json
engine/header/: CameraComponent.h  Component.h  Engine.h  GameObject.h  RectRenderer.h  RenderSystem.h  ScrapperEngine.Rendering.h  ScrapperEngine.h  SpriteRenderer.h  Transform.h
engine/header/Core/: Engine.h  GameObject.h
engine/header/Core/TransformSystem/: Transform.h  TransformSystem.h
engine/header/Rendering/CameraComponent/: Camera2DComponent.h  CameraComponent.h
engine/header/Rendering/RendererComponent/: RectRenderer.h  Renderer.h  SpriteRenderer.h  TextRenderer.h
engine/headers/: Camera2DComponent.h  CameraComponent.h  Component.h  Engine.h  GameObject.h  RectRenderer.h  RenderSystem.h  Renderer.h  Scrapper.h  SpriteComponent.h  SpriteRenderer.h  TextRenderer.h  Transform.h
engine/source/: Engine.cpp  RenderSystem.cpp
header/: Controller.h  Engine.h  Entity.h  Event.h  EventEngine.h  GameEngine.h  GameLoop.h  Item.h  JsonMapParser.h  Mob.h  Object.h  Renderer.h  Screen.h  Tile.h  Vector.h  World.h
header/EventComponents/: ChoiceComponent.h  EventComponent.h  TextComponent.h
include/: RandomUtil.hpp  Utilities.h
main.dSYM/Contents/Resources/DWARF/: main
source/: Controller.cpp  Entity.cpp  GameLoop.cpp  Item.cpp  JsonMapParser.cpp  Mob.cpp  Renderer.cpp  Tile.cpp  World.cpp  main.cpp
source/Core/EventComponents/: ChoiceComponent.cpp  TextComponent.cpp
source/Core/EventEngine/: EventEngine.cpp
source/Engine_Core/: Screen.cpp
source/utilities/: Vector.cpp
src/: main  main.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
